<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/hitungFragment">

    <fragment
        android:id="@+id/hitungFragment"
        android:name="org.d3if4067.hitungbmr.ui.hitung.HitungFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_hitung" >
        <action
            android:id="@+id/action_hitungFragment_to_aboutFragment"
            app:destination="@id/aboutFragment" />
        <action
            android:id="@+id/action_hitungFragment_to_historiFragment"
            app:destination="@id/historiFragment" />
        <action
            android:id="@+id/action_hitungFragment_to_lainnyaFragment"
            app:destination="@id/lainnyaFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="org.d3if4067.hitungbmr.ui.AboutFragment"
        android:label="@string/tentang_aplikasi"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/historiFragment"
        android:name="org.d3if4067.hitungbmr.ui.histori.HistoriFragment"
        android:label="@string/histori"
        tools:layout="@layout/fragment_histori" />
    <fragment
        android:id="@+id/lainnyaFragment"
        android:name="org.d3if4067.hitungbmr.ui.lainnya.LainnyaFragment"
        android:label="@string/lainnya" />
</navigation>